--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 	<center><h1>AWS IP Search Project</h1></center>
+	<center><h1>AWS IP Search Project</h1></center>
+	<center><h1>AWS IP Search Project</h1></center>
+	<center><h1>AWS IP Search Project</h1></center>
+	
 </body>
 </html>
